# py-reimplementations

./: CHANGELOGS.md  README.md  USAGE.md  pyproject.toml  requirements.txt
src/essentials/mathematics/: geometry.py  numbers.py
tests/: test-geometry.py  test-numbers.py
